# nadi-sdk

./: README.md  lcov.info  pyproject.toml
nadi/: cli.py  config.py  input.py  source.py  stream.py
nadi/sdk/: auth.py  cli.py  config.py  input.py  source.py  stream.py  util.py
nadi_sdk/: cli.py  config.py  input.py  source.py  stream.py  util.py
tests/: test_cli.py  test_config.py  test_input.py  test_source.py  test_stream.py
