[tool.poetry]
name = "nadi"
version = "0.0.1"
description = "An SDK allowing you to fetch data from any source, inspired by Singer Spec."
authors = ["gauthamchettiar <gauthamchettiar@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/nadi-app/nadi-sdk"
repository = "https://github.com/nadi-app/nadi-sdk"
keywords = ["nadi", "data", "api"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
jsonschema = "^4.19.0"
jsonpath-ng = "^1.5.3"
typer = "^0.9.0"

[tool.poetry.group.test.dependencies]
testfixtures = "^7.1.0"
responses = "^0.23.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
